# cuda_vs_simd

./: CMakeLists.txt  README.md
example1/: CMakeLists.txt  README.md  cuda.cu  cuda.hpp  main.cpp  simd.cpp  simd.hpp
